--- a/mobil.css
+++ b/mobil.css
@@ -331,8 +331,12 @@ display:none;
 }
 
 .mobilebackground {
-background-image: linear-gradient(rgba(0, 0, 0, 2), rgba(0, 0, 0, 0.8)), url(mosaik.png);
-background-repeat: repeat;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.95)), url("lila.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
 hr {
