--- a/desktop.css
+++ b/desktop.css
@@ -456,7 +456,12 @@ margin-top:0em;
 
 
 
-
+.headerspan {
+font-size:16px; 
+color:#00ff00; 
+font-family:'Courier New',Arial; 
+font-weight: lighter
+}
 
   a.eight {
   color: #00ff00;
