--- a/mobil.css
+++ b/mobil.css
@@ -217,7 +217,7 @@ height:22px;
 margin-right:30px;
 position: relative;
 display: inline-block;
-background: url("spotify.png") no-repeat;
+background: url("spotify2.png") no-repeat;
 background-size: 22px;
  z-index:99;
 
@@ -225,7 +225,7 @@ box-shadow: 0px 0px -10px 10px rgba(0,0,0,0.75);
 }
 
 .spotify:hover {
-background: url("spotify2.png") no-repeat;
+background: url("spotify.png") no-repeat;
 background-size: 22px;
 }
 
@@ -235,7 +235,7 @@ height:22px;
 margin-right:30px;
 position: relative;
 display: inline-block;
-background: url("applemusic.png") no-repeat;
+background: url("applemusic4.png") no-repeat;
 background-size: 22px;
  z-index:99;
 
@@ -254,7 +254,7 @@ height:22px;
 margin-right:30px;
 position: relative;
 display: inline-block;
-background: url("youtube.png") no-repeat;
+background: url("youtube4.png") no-repeat;
 background-size: 22px;
  z-index:99;
 
@@ -272,7 +272,7 @@ height:22px;
 margin-right:30px;
 position: relative;
 display: inline-block;
-background: url("soundcloud.png") no-repeat;
+background: url("soundcloud4.png") no-repeat;
 background-size: 22px;
  z-index:99;
 }
@@ -288,7 +288,7 @@ height:20px;
 margin-right:30px;
 position: relative;
 display: inline-block;
-background: url("instagram.png") no-repeat;
+background: url("instagram4.png") no-repeat;
 background-size: 20px;
  z-index:99;
 }
@@ -303,7 +303,7 @@ width:20px;
 height:20px;
 position: relative;
 display: inline-block;
-background: url("facebook.png") no-repeat;
+background: url("facebook4.png") no-repeat;
 background-size: 20px;
  z-index:99;
 }
@@ -446,7 +446,12 @@ margin-top:0em;
 
 
 
-
+.headerspan {
+font-size:16px; 
+color:#000000; 
+font-family:'Courier New',Arial; 
+font-weight: lighter
+}
 
   a.eight {
   color: #00ff00;
@@ -526,7 +531,7 @@ a.four:hover {
 }
 
 a.one {
-color:#00FF00;
+color:#000000;
 text-decoration:none;
 font-family: 'Courier New',Arial;
 font-size: 16px;
@@ -561,7 +566,7 @@ a.five:hover {
 }
 
 a.ten {
-color:#00FF00;
+color:#000000;
 font-family:'Courier New',Arial;
 font-weight: lighter;
  text-decoration:none;
