--- a/mobil.css
+++ b/mobil.css
@@ -331,7 +331,7 @@ display:none;
 }
 
 .mobilebackground {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.95)), url("whiteangel.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.95)), url("whiteangel.JPG");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
