--- a/mobil.css
+++ b/mobil.css
@@ -98,8 +98,18 @@ object-fit: cover;
     display: none;
     }
     
+.thenewsingle {
+display: none;
+}
+    
         h3 {
         font-size: 3.5vw;
+        color:#000000; 
+     font-family:'New Times Roman';
+    }
+    
+            h4 {
+        font-size: 1.5vw;
         color:#000000; 
      font-family:'New Times Roman';
     }
