--- a/desktop.css
+++ b/desktop.css
@@ -200,8 +200,23 @@ object-fit: cover;
     position: absolute;
     margin-top: -200px;
     margin-left: -500px;
+      -moz-border-radius-topleft: 10px;
+  -moz-border-radius-topright: 10px;
+  -moz-border-radius-bottomright: 10px;
+  -moz-border-radius-bottomleft: 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+  border-radius: 10px 10px 10px 10px;
+   transition-duration: 0.3s;
   }
   
+   img.ghibli:hover{
+  -moz-border-radius-topleft: 35px;
+  -moz-border-radius-topright: 35px;
+  -moz-border-radius-bottomright: 35px;
+  -moz-border-radius-bottomleft: 35px;
+  -webkit-border-radius: 35px 35px 35px 35px;
+  border-radius: 35px 35px 35px 35px;
+}
 
 
 .mobilebackground {
