--- a/mobil.css
+++ b/mobil.css
@@ -341,9 +341,9 @@ display:none;
 }
 
 .mobilebackground {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.95)), url("flowers.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.95)), url("isawyoubackground.jpg");
   height: 100%;
-  background-position: left;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
