--- a/desktop.css
+++ b/desktop.css
@@ -64,7 +64,7 @@ z-index: 99;
 
 .bottom_area {
 position: fixed;
-bottom: 0;
+bottom: -45px;
 left: 50%;
 -webkit-transform: translate(-50%, -50%);
 transform: translate(-50%, -50%);
