--- a/desktop.css
+++ b/desktop.css
@@ -72,6 +72,7 @@ transform: translate(-50%, -50%);
 
 .firstbottomline {
 text-align: center;
+margin-bottom: 10px;
 }
 
 
@@ -106,6 +107,11 @@ vertical-align: middle;
 }
 
 .secondbottomline {
+display: inline;
+}
+
+.mj-w-res-iframe {
+display: inline;
 }
 
 .thirdbottomline {
