--- a/mobil.css
+++ b/mobil.css
@@ -1,28 +1,36 @@
+/* Stylesheet für Mobil */
 
 <!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-           
+
 a,a:link,a:visited{outline:none;}
 
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap');
 
+html {
+  scroll-behavior: smooth;
+}
 
-html, body {
-height: 100%;
-margin: 0;
-overflow: hidden;
+body, html {
+  height: 100%;
+  margin: 0;
 }
 
 body {
 background-image: url(background2.jpg);
-height: 100%;
 margin: 0;
+height: 100%;
 background-size: cover;
 }
- 
+
+
+
+
+
+
 .artist_name {
 position: relative;
 padding-top:15px;
@@ -35,16 +43,11 @@ z-index: 99;
 padding-top:1px;
 padding-bottom:5px;
 content:url(endorcism_logo_white.png);
-width: 900px;
+width: 100%;
 position: relative; 
 margin: 0 auto;
  z-index: 99;
 }
-
-
-
-
-
 
 .order {
 position: absolute;
@@ -55,19 +58,21 @@ transform: translate(-50%, -50%);
 text-align: center;
 z-index: 99;
 cursor: pointer;
+width: 100%;
+height: auto;
 }
-
-
-
-
 
 
 .bottom_area {
 position: fixed;
-bottom: -45px;
-left: 50%;
--webkit-transform: translate(-50%, -50%);
-transform: translate(-50%, -50%);
+width: auto;
+height: auto;
+margin-left:10px;
+margin-right:10px;
+margin-bottom:10px;
+left: 0;
+right: 0;
+bottom: 0;
 }
 
 .firstbottomline {
@@ -75,16 +80,15 @@ text-align: center;
 margin-bottom: 10px;
 }
 
-
 .tour {
 display: inline;
-margin-right:10px;
+margin-right:2.5px;
 }
 
 .bracketleft {
 display: inline;
-margin-right:20px;
-margin-left: 10px;
+margin-right:5px;
+margin-left: 2.5px;
 cursor: default;
 }
 
@@ -95,14 +99,14 @@ z-index: 99;
 
 .bracketright {
 display: inline;
-margin-right:10px;
-margin-left: 20px;
+margin-right:2.5px;
+margin-left: 5px;
 cursor: default;
 }
 
 .store {
 display: inline;
-margin-left: 10px;
+margin-left: 2.5px;
 vertical-align: middle;
 }
 
@@ -198,7 +202,7 @@ a.three {
 color:#ffffff;
 font-family: 'IM Fell English', serif;
 text-decoration:none;
-font-size: 25px;
+font-size: 20px;
 transition-duration: 0.4s;
 }
 
@@ -230,9 +234,6 @@ font-style: italic;
 font-size: 15px;
 transition-duration: 0.4s;
 }
-
-
-
 
 
 
