--- a/desktop.css
+++ b/desktop.css
@@ -221,6 +221,7 @@ font-family: 'Gabriele Dark Ribbon FG', serif;
 font-size: 13px;
 transition-duration: 0.4s;
 -moz-osx-font-smoothing: grayscale;
+src: url("../amygdala_amara/gabriele-dark-ribbon-fg-regular.ttf") format('truetype');
 }
 
 a.six {
@@ -230,6 +231,7 @@ font-family: 'Gabriele Dark Ribbon FG', serif;
 font-size: 13px;
 transition-duration: 0.4s;
 -moz-osx-font-smoothing: grayscale;
+src: url("../amygdala_amara/gabriele-dark-ribbon-fg-regular.ttf") format('truetype');
 }
 
 
