--- a/desktop.css
+++ b/desktop.css
@@ -17,7 +17,7 @@ overflow: hidden;
 }
 
 body {
-background-image: url(background2.jpg);
+background-image: url(green.jpg);
 height: 100%;
 margin: 0;
 background-size: cover;
