--- a/mobil.css
+++ b/mobil.css
@@ -20,7 +20,7 @@ body, html {
 }
 
 body {
-background-image: url(background2.jpg);
+background-image: url(green.jpg);
 margin: 0;
 height: 100%;
 background-size: cover;
