--- a/mobil.css
+++ b/mobil.css
@@ -19,17 +19,15 @@ body, html {
   margin: 0;
 }
 
-body {
-background-image: url(green.jpg);
-margin: 0;
-height: 100%;
-background-size: cover;
+
+video {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
-
-
-
-
-
 
 .artist_name {
 position: relative;
